--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 description = "Fast high precision decimal"
 keywords = ["decimal", "fast", "precision", "number"]
-categories = ["Mathematics", "Data structures"]
+categories = ["mathematics", "data-structures"]
 repository = "https://github.com/davidli2010/fast-decimal.git"
 homepage = "https://github.com/davidli2010/fast-decimal"
 documentation = "https://docs.rs/fast-decimal/"
