--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ categories = ["mathematics", "data-structures"]
 repository = "https://github.com/davidli2010/fast-decimal.git"
 homepage = "https://github.com/davidli2010/fast-decimal"
 documentation = "https://docs.rs/fast-decimal/"
+
+[dependencies]
+stack-buf = "0.1.6"
