--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ documentation = "https://docs.rs/fast-decimal/"
 
 [dependencies]
 stack-buf = "0.1.6"
+
+[dev-dependencies]
+bencher = "0.1.5"
+
+[[bench]]
+name = "benchmark"
+harness = false
